--- a/playing-jupyternotebook.ipynb
+++ b/playing-jupyternotebook.ipynb
@@ -64,11 +64,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    ";lksfdl;gkselgks;rgk;'srthk;'strhktrsrt"
+   ]
   }
  ],
  "metadata": {
