Updated function square root

--- a/playing-jupyternotebook.ipynb
+++ b/playing-jupyternotebook.ipynb
@@ -1,74 +1,163 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "i = 9\n"
+    "# Task"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are my solution to task assesment. An author Rita Val.(ritaval28@gmail.com)\n",
+    "\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Task: Calculate a square root.\n",
+    "***\n",
+    "\n",
+    "\n",
+    "We can calculate osf square root of a number by using Newton's method [1].\n",
+    "to find the square root $z$ of a number $x$, we can iterate using the following equation.\n",
+    "\n",
+    "$$ z = z- \\frac{z^2 - x} {2z} $$\n",
+    "\n",
+    "[1] A Tour of GO; Exercise: Loops and Functions;  https://tour.golang.org/flowcontrol/8"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sqrt(x):\n",
+    "    \"\"\"\n",
+    "    # A function to calculate the square root of a number x.\n",
+    "    \"\"\"\n",
+    "    # Initial quess for the square root z.\n",
+    "    z = x / 2\n",
+    "    # Loop until we're happy with accuracy.\n",
+    "    while abs(x - (z * z)) > 0.00000001:\n",
+    "        # Calculate better quess for the square root.\n",
+    "        z -= (z*z - x) / (2 * z)\n",
+    "        # Return the (approximately) square root of x.\n",
+    "    return z\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Tests of the function\n",
+    "\n",
+    "Here we test the function with some known values.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "9"
+       "10.000000000107446"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "i"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "jupyter notebook   vv,,,,,vvvv"
+    "# Test the function on 100.\n",
+    "sqrt(100)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n"
-     ]
+     "data": {
+      "text/plain": [
+       "2400"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "for i in range(10):\n",
-    "    print(i)"
+    "abs(100 - (50 * 50))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.4142135623746899"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Test the function on 2.\n",
+    "sqrt(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.4142135623730951"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Test with the library \"Math\".\n",
+    "import math\n",
+    "math.sqrt(2)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ";lksfdl;gkselgks;rgk;'srthk;'strhktrsrt"
+    "***\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
